# design-router-local-llm

./: .gitignore  CANONICAL_SOURCE.md  LICENSE  MIGRATION.md  README.md  pyproject.toml  server.json
docs/: eval-quality.md
goldensets/shared_atoms/bento_grid_v1/: meta.json  notes.md  snippet.css  snippet.html
goldensets/shared_atoms/card_profile_v1/: meta.json  notes.md  snippet.css  snippet.html
goldensets/shared_atoms/card_service_v1/: meta.json  notes.md  snippet.css  snippet.html  snippet.js
goldensets/shared_atoms/comparison_table_v1/: meta.json  notes.md  snippet.css  snippet.html
goldensets/shared_atoms/consultation_board_v1/: snippet.css
goldensets/shared_atoms/cta_conversion_band_v1/: meta.json  notes.md  snippet.css  snippet.html
goldensets/shared_atoms/faq_accordion_v1/: meta.json  notes.md  snippet.css  snippet.html  snippet.js
goldensets/shared_atoms/feature_split_alternating_v1/: meta.json  notes.md  snippet.css  snippet.html
goldensets/shared_atoms/footer_full_v1/: snippet.html
goldensets/shared_atoms/footer_full_v2/: meta.json  notes.md  snippet.css  snippet.html  snippet.js
goldensets/shared_atoms/form_intake_states_v1/: meta.json  notes.md  snippet.css  snippet.html  snippet.js
goldensets/shared_atoms/form_multistep_v1/: meta.json  notes.md  snippet.css  snippet.html  snippet.js
goldensets/shared_atoms/foundation_design_tokens_v1/: meta.json  notes.md  snippet.css  snippet.html
goldensets/shared_atoms/gallery_filter_v1/: meta.json  notes.md  snippet.css  snippet.html  snippet.js
goldensets/shared_atoms/hero_fullbleed_v1/: meta.json  notes.md  (+2 more)
src/design_router_mcp/: __init__.py  atom_selector.py  cli.py  index_store.py  lazy_loader.py  local_llm_mcp_server.py  mcp_server.py  normalizer.py  pack_loader.py  registry.py  render_context.py  renderer.py  router.py  rules.py  sanitizer.py  schemas.py  service.py  validation.py
tests/: test_frontier_pattern_bank.py  test_hardening.py  test_public_smoke.py
(+564 files in other folders)
